made input elements be border-box to fix its width overlapping parent's width

--- a/newsletter-sign-up-with-success-message-main/styles/style.css
+++ b/newsletter-sign-up-with-success-message-main/styles/style.css
@@ -57,6 +57,10 @@ main{
     padding-bottom: 16px;
 }
 
+input{
+    box-sizing: border-box;
+}
+
 input[type=text]{
     border: 1px solid hsl(231, 7%, 60%);
     border-radius: 5px;
